force-app/main/default/objects/EventExecutor__e/EventExecutor__e.object-meta.xml
<CustomObject>
    <label>EventExecutor</label>
    <pluralLabel>EventExecutors</pluralLabel>
</CustomObject>