force-app/main/default/objects/EventExecutor__e/fields/Executor__c.field-meta.xml
<CustomField>
    <fullName>Executor__c</fullName>
    <description>A class name that implements IEventExecutable</description>
    <inlineHelpText>A class name that implements IEventExecutable</inlineHelpText>
    <label>Executor</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>