force-app/main/default/objects/EventExecutor__e/fields/LastEventExecutorException__c.field-meta.xml
<CustomField>
    <fullName>LastEventExecutorException__c</fullName>
    <label>LastEventExecutorException</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>