force-app/main/default/objects/EventExecutor__e/fields/LastEventExecutorReplayId__c.field-meta.xml
<CustomField>
    <fullName>LastEventExecutorReplayId__c</fullName>
    <label>LastEventExecutorReplayId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>