force-app/main/default/objects/EventExecutor__e/fields/LastEventExecutorUuid__c.field-meta.xml
<CustomField>
    <fullName>LastEventExecutorUuid__c</fullName>
    <label>LastEventExecutorUuid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>