force-app/main/default/objects/EventExecutor__e/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <description>A JSON string that contains parameters that is used in the execute functions</description>
    <inlineHelpText>A JSON string that contains parameters that is used in the execute functions</inlineHelpText>
    <label>Parameters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>