force-app/main/default/objects/EventExecutor__e/fields/QueuebleDuplicateSignature__c.field-meta.xml
<CustomField>
    <fullName>QueuebleDuplicateSignature__c</fullName>
    <label>QueuebleDuplicateSignature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>