force-app/main/default/objects/EventExecutor__e/fields/RetryCount__c.field-meta.xml
<CustomField>
    <fullName>RetryCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The counter with number of times executed has failed before</description>
    <inlineHelpText>The counter with number of times executed has failed before</inlineHelpText>
    <label>RetryCount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>